--- a/hugo.toml
+++ b/hugo.toml
@@ -5,17 +5,17 @@ languageCode = "en"
 defaultContentLanguage = "en"
 enableEmoji = true
 
-[deployment]
-confirm = true
-dryRun = false
-force = false
-invalidateCDN = true
-maxDeletes = 256
-target = 'gcloud'
-workers = 10
-[[deployment.targets]]
-name = 'gcloud'
-url = 'gs://ivanlawrence.com'
+# [deployment]
+# confirm = true
+# dryRun = false
+# force = false
+# invalidateCDN = true
+# maxDeletes = 256
+# target = 'gcloud'
+# workers = 10
+# [[deployment.targets]]
+# name = 'gcloud'
+# url = 'gs://ivanlawrence.com'
 
 [pagination]
 pagerSize = 6
@@ -204,10 +204,10 @@ name = "Posts"
 weight = 2
 url = "posts/"
 
-# [[languages.en.menu.main]]
-# name = "Projects"
-# weight = 3
-# url = "projects/"
+[[languages.en.menu.main]]
+name = "Tags"
+weight = 3
+url = "tags/"
 
 [[languages.en.menu.main]]
 name = "Resume"
