--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - actions
 
+permissions:
+  contents: write 
+
 jobs:
   import_rss:
     if: github.actor != 'github-actions[bot]'
@@ -21,8 +24,13 @@ jobs:
           output_dir: "content/nerdler"
 
       - name: Commit and push changes
+        env:
+          TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add -A
-          git diff --cached --quiet || (git commit -m "Update blog posts from RSS feed" && git push)
+          git diff --cached --quiet || (
+            git commit -m "Update blog posts from RSS feed"
+            git push https://x-access-token:${TOKEN}@github.com/${{ github.repository }} HEAD:actions
+          )
