--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -20,7 +20,7 @@ jobs:
         uses: keiranlovett/rss-feed-to-markdown@v1.1.6
         with:
           feed_url: "https://nerdler.ivanlawrence.com/feeds/posts/default?alt=rss"
-          template_file: "templates/blog_template.md"
+          template_file: "assets/blog_template.md"
           output_dir: "content/nerdler"
 
       - name: Commit and push changes
