--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v4
       
       - name: RSS Feed to Markdown
-        uses: keiranlovett/rss-feed-to-markdown@v1.1.6
+        uses: ivanlawrence/rss-feed-to-markdown@main
         with:
           feed_url: "https://nerdler.ivanlawrence.com/feeds/posts/default?alt=rss"
           template_file: "assets/blog_template.md"
