--- a/hugo.toml
+++ b/hugo.toml
@@ -183,13 +183,13 @@ url = "https://www.linkedin.com/in/ivan-lawrence/"
 # weight = 5
 # url = "https://medium.com/@ivanlawrence"
 
-# [[params.social]]
-# name = "RSS"
-# icon = "fa-solid fa-rss fa-2x"
-# weight = 6
-# url = "https://myhugosite.com/index.xml"
-# rel = "alternate"
-# type = "application/rss+xml"
+[[params.social]]
+name = "RSS"
+icon = "fa-solid fa-rss fa-2x"
+weight = 5
+url = "https://ivanlawrence.com/index.xml"
+rel = "alternate"
+type = "application/rss+xml"
 
 [languages.en]
 languageName = ":us:"
