adds some config changes to posts and hugo theme

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,6 @@
 baseURL = "https://ivanlawrence.com"
 title = "Ivan Lawrence"
-theme = "hugo-coder"
+theme = ["hugo-coder"]
 languageCode = "en"
 defaultContentLanguage = "en"
 enableEmoji = true
