--- a/hugo.toml
+++ b/hugo.toml
@@ -38,7 +38,7 @@ author = "Ivan Lawrence"
 # license = '<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA-4.0</a>'
 description = "Ivan Lawrence's personal website"
 keywords = "blog,developer,personal"
-info = ["Full Stack DevOps", "Magician", "Rock Climber"]
+info = ["Full Stack DevOps", "Magician", "Rock Climber", "Snow Boarder"]
 avatarURL = "images/avatar.jpg"
 #gravatar = "john.doe@example.com"
 dateFormat = "January 2, 2006"
